Fixing unwanted space on small screens

--- a/src/components/HeaderLink/HeaderLink.less
+++ b/src/components/HeaderLink/HeaderLink.less
@@ -27,8 +27,8 @@
   }
 }
 
-.link-icon {
-  margin-right: 5px;
+.link-text {
+  margin-left: 5px;
 }
 
 
